# NotesProgram

./: .gitignore  CMakeLists.txt  EditCommand.hpp  Note.cpp  README.md  unit_test.cpp
header/: DisplayNoWordCount.hpp  DisplayStrat.hpp  DisplayWordCount.hpp  EditCommand.hpp  Note.hpp  NoteBook.hpp  Notebook.hpp  NotebookEntry.hpp  TextEditCommand.hpp
src/: DisplayNoWordCount.cpp  DisplayWordCount.cpp  Note.cpp  Notebook.cpp  altmain.cpp  main.cpp  unit_test.cpp
src/Notefiles/: bluebook.txt  test.txt
